--- a/config/settings.ini
+++ b/config/settings.ini
@@ -39,8 +39,8 @@ DefaultWorld=world
 ; Plugin=APIDump
 Plugin=Core
 Plugin=TransAPI
-Plugin=ChatLog
-Plugin=Docker
+ChatLog=1
+Docker=1
 
 [DeadlockDetect]
 Enabled=1
