Updated and working

--- a/config/settings.ini
+++ b/config/settings.ini
@@ -39,8 +39,8 @@ DefaultWorld=world
 ; Plugin=APIDump
 Plugin=Core
 Plugin=TransAPI
-ChatLog=1
-Docker=1
+Plugin=ChatLog
+Plugin=Docker
 
 [DeadlockDetect]
 Enabled=1
